--- a/config.build.in
+++ b/config.build.in
@@ -2,4 +2,4 @@ BUILD_RELEASE           = JUDASPRIEST
 BUILD_RELEASE_NO        = 8.8.0
 BUILD_RELEASE_CANDIDATE = GA
 BUILD_TYPE              = NETWORK
-THIRDPARTY_SERVER       = zdev-vm008.eng.zimbra.com
+BUILD_THIRDPARTY_SERVER = zdev-vm008.eng.zimbra.com
