ZCS-465 - Reorganized zm-build, removed unused files, moved private repo/files/settings out to FOSS

--- a/config.build.in
+++ b/config.build.in
@@ -1,5 +1,5 @@
 BUILD_RELEASE           = JUDASPRIEST
 BUILD_RELEASE_NO        = 8.8.0
 BUILD_RELEASE_CANDIDATE = GA
-BUILD_TYPE              = NETWORK
+BUILD_TYPE              = FOSS
 BUILD_THIRDPARTY_SERVER = zdev-vm008.eng.zimbra.com
