--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,7 +37,15 @@ references:
             root: ../BUILDS
             paths: ./*
 
-   deploy_job_steps: &deploy_job_steps
+   stub_build_job_steps: &stub_build_job_steps
+      steps:
+         - run:
+            name: Creating nothing
+            command: |
+               date
+               echo nothing
+
+   deploy_s3_job_steps: &deploy_s3_job_steps
       steps:
          - checkout
          - run:
@@ -57,7 +65,7 @@ jobs:
          - ZIMBRA_OS_TAG: u16
          - ZIMBRA_BUILD_OS: UBUNTU16_64
       docker:
-         - image: ubuntu:16.04
+         - image: zimbra/zm-base-os:devcore-ubuntu-16.04
       <<: *build_job_steps
 
    build_u14:
@@ -66,7 +74,7 @@ jobs:
          - ZIMBRA_OS_TAG: u14
          - ZIMBRA_BUILD_OS: UBUNTU14_64
       docker:
-         - image: ubuntu:14.04
+         - image: zimbra/zm-base-os:devcore-ubuntu-14.04
       <<: *build_job_steps
 
    build_u12:
@@ -75,7 +83,7 @@ jobs:
          - ZIMBRA_OS_TAG: u12
          - ZIMBRA_BUILD_OS: UBUNTU12_64
       docker:
-         - image: ubuntu:12.04
+         - image: zimbra/zm-base-os:devcore-ubuntu-12.04
       <<: *build_job_steps
 
    build_c7:
@@ -84,7 +92,7 @@ jobs:
          - ZIMBRA_OS_TAG: c7
          - ZIMBRA_BUILD_OS: RHEL7_64
       docker:
-         - image: centos:7
+         - image: zimbra/zm-base-os:devcore-centos-7
       <<: *build_job_steps
 
    build_c6:
@@ -93,14 +101,14 @@ jobs:
          - ZIMBRA_OS_TAG: c6
          - ZIMBRA_BUILD_OS: RHEL6_64
       docker:
-         - image: centos:6
+         - image: zimbra/zm-base-os:devcore-centos-6
       <<: *build_job_steps
 
    deploy_s3:
       working_directory: ~/zm-build
       docker:
-         - image: ubuntu
-      <<: *deploy_job_steps
+         - image: zimbra/zm-base-os:core-ubuntu
+      <<: *deploy_s3_job_steps
 
 ############################################################################
 
@@ -113,7 +121,7 @@ workflows:
          - build_u12
          - build_c7
          - build_c6
-         - hold:
+         - deploy_s3_hold:
             type: approval
             requires:
                - build_u16
@@ -123,4 +131,4 @@ workflows:
                - build_c6
          - deploy_s3:
             requires:
-               - hold
+               - deploy_s3_hold
