--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,12 +6,13 @@ version: 2
 ############################################################################
 
 references:
-   build_job_steps: &build_job_steps
+   checkout_job_steps: &checkout_job_steps
       steps:
          - checkout
          - run:
-            name: Creating build
+            name: Checking out dependencies
             command: |
+               mkdir -p ../BUILDS
                ./build.pl \
                   --build-type=FOSS \
                   --build-hostname=build.zimbra.org \
@@ -21,34 +22,66 @@ references:
                   --build-thirdparty-server=zdev-vm008.eng.zimbra.com \
                   --deploy-url-prefix="https://files.zimbra.com/dev-releases" \
                   --git-default-branch="$CIRCLE_BRANCH,develop" \
-                  --build-os="$ZIMBRA_BUILD_OS" \
+                  --build-os="UBUNTU16_64" \
+                  --pkg-os-tag="u16" \
                   --build-no="$CIRCLE_BUILD_NUM" \
                   --build-ts="$(date "+%Y%m%d%M%H%S")" \
                   --ant-options="-DskipTests=1" \
                   --no-interactive \
                   --disable-bundle \
-                  2>&1 | tee -a build.log;
-               mkdir -p ../BUILDS
-               mv build.log ../BUILDS/build-${ZIMBRA_OS_TAG}.log
+                  --dump-config-to="$PWD/config.build" \
+                  --stop-after-checkout \
+                  2>&1 \
+               | tee ../BUILDS/checkout.log;
+
+               # FIXME: remove this hack, and fix --dump-config-to
+               sed -i \
+                  -e '/^DUMP_CONFIG_TO/d' \
+                  -e '/^STOP_AFTER_CHECKOUT/d' \
+                  -e '/^INTERACTIVE/d' \
+                  -e '/^BUILD_OS/d' \
+                  -e '/^PKG_OS_TAG/d' \
+                  -e '/^BUILD_ARCH/d' \
+                  -e '/\<UBUNTU16_64\>/d' \
+                  -e '/\<BUILDS\>/d' \
+                  config.build;
+         - persist_to_workspace:
+            root: ../..
+            paths:
+               - checkout
+               - .zcs-deps
+
+   build_job_steps: &build_job_steps
+      steps:
+         - attach_workspace:
+            at: ../..
+         - run:
+            name: Creating build
+            command: |
+               rm ../BUILDS/checkout.log
+               ENV_GIT_UPDATE_INCLUDE=@ \
+                  ./build.pl 2>&1 \
+                     --build-os="$ZIMBRA_BUILD_OS" \
+                     --pkg-os-tag="$ZIMBRA_OS_TAG" \
+                     --no-interactive \
+               | tee -a ../BUILDS/build-${ZIMBRA_OS_TAG}.log
          - store_artifacts:
             path: ../BUILDS
          - persist_to_workspace:
-            root: ../BUILDS
-            paths: ./*
+            root: ../..
+            paths: checkout/BUILDS
 
    deploy_s3_job_steps: &deploy_s3_job_steps
       steps:
-         - checkout
          - attach_workspace:
-            at: ../BUILDS
+            at: ../..
          - deploy:
             command: .circleci/jobs/deploy_s3/deploy.sh
 
    deploy_ec2_job_steps: &deploy_ec2_job_steps
       steps:
-         - checkout
          - attach_workspace:
-            at: ../BUILDS
+            at: ../..
          - deploy:
             command: .circleci/jobs/deploy_ec2/deploy.sh ${OPERATION}
 
@@ -62,8 +95,15 @@ references:
 ############################################################################
 
 jobs:
+   checkout:
+      working_directory: ~/checkout/zm-build
+      shell: /bin/bash -euo pipefail
+      docker:
+         - image: zimbra/zm-base-os:devcore-ubuntu-16.04
+      <<: *checkout_job_steps
+
    build_u16:
-      working_directory: ~/zm-build
+      working_directory: ~/checkout/zm-build
       shell: /bin/bash -euo pipefail
       environment:
          - ZIMBRA_OS_TAG: u16
@@ -73,7 +113,7 @@ jobs:
       <<: *build_job_steps
 
    build_u14:
-      working_directory: ~/zm-build
+      working_directory: ~/checkout/zm-build
       shell: /bin/bash -euo pipefail
       environment:
          - ZIMBRA_OS_TAG: u14
@@ -83,7 +123,7 @@ jobs:
       <<: *build_job_steps
 
    build_u12:
-      working_directory: ~/zm-build
+      working_directory: ~/checkout/zm-build
       shell: /bin/bash -euo pipefail
       environment:
          - ZIMBRA_OS_TAG: u12
@@ -93,7 +133,7 @@ jobs:
       <<: *build_job_steps
 
    build_r7:
-      working_directory: ~/zm-build
+      working_directory: ~/checkout/zm-build
       shell: /bin/bash -euo pipefail
       environment:
          - ZIMBRA_OS_TAG: r7
@@ -103,7 +143,7 @@ jobs:
       <<: *build_job_steps
 
    build_r6:
-      working_directory: ~/zm-build
+      working_directory: ~/checkout/zm-build
       shell: /bin/bash -euo pipefail
       environment:
          - ZIMBRA_OS_TAG: r6
@@ -113,14 +153,14 @@ jobs:
       <<: *build_job_steps
 
    deploy_s3:
-      working_directory: ~/zm-build
+      working_directory: ~/checkout/zm-build
       shell: /bin/bash -euo pipefail
       docker:
          - image: zimbra/zm-base-os:core-ubuntu
       <<: *deploy_s3_job_steps
 
    deploy_ec2@app1_install:
-      working_directory: ~/zm-build
+      working_directory: ~/checkout/zm-build
       shell: /bin/bash -euo pipefail
       environment:
          - OPERATION: install
@@ -129,7 +169,7 @@ jobs:
       <<: *deploy_ec2_job_steps
 
    deploy_ec2@app1_upgrade:
-      working_directory: ~/zm-build
+      working_directory: ~/checkout/zm-build
       shell: /bin/bash -euo pipefail
       environment:
          - OPERATION: upgrade
@@ -141,13 +181,29 @@ jobs:
 
 workflows:
    version: 2
-   build_and_deploy:
+   main:
       jobs:
-         - build_u16
-         - build_u14
-         - build_u12
-#         - build_r7    (core dump issue while running ant)
-         - build_r6
+         - checkout
+
+         #########################
+
+         - build_u16:
+            requires:
+               - checkout
+         - build_u14:
+            requires:
+               - checkout
+         - build_u12:
+            requires:
+               - checkout
+#         - build_r7:
+#            requires:
+#               - checkout
+         - build_r6:
+            requires:
+               - checkout
+
+         #########################
 
          - deploy_s3_hold:
             type: approval
@@ -163,6 +219,8 @@ workflows:
             requires:
                - deploy_s3_hold
             <<: *std_filters
+
+         #########################
 
          - app1_ec2_install:
             type: approval
