ZCS-3541 - CircleCI - Disabled zm-timezones (only for CircleCI), explicitly set zimbra-timezone-data as dependency of zimbra-core, added S3 alternate path for ec2 deployment

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,6 +31,7 @@ references:
                   --disable-bundle \
                   --dump-config-to="$PWD/config.build" \
                   --stop-after-checkout \
+                  --exclude-git-repos=zm-timezones \
                   2>&1 \
                | tee ../BUILDS/checkout.log;
 
