--- a/config.build.in
+++ b/config.build.in
@@ -8,8 +8,15 @@ BUILD_RELEASE_CANDIDATE = GA
 BUILD_TYPE              = FOSS
 BUILD_THIRDPARTY_SERVER = zdev-vm008.eng.zimbra.com
 
+GIT_DEFAULT_BRANCH = develop
+ANT_OPTIONS = -DskipTests=1
+INTERACTIVE = 0
+DISABLE_BUNDLE = 1
+
 # Example of GIT_OVERRIDES (hash)
 # %GIT_OVERRIDES          = myremote.url-prefix=ssh://git@stash.corp.synacor.com:7999/~user/zm-mailbox.git
-# %GIT_OVERRIDES          = zm-mailbox.branch=dev
+%GIT_OVERRIDES = zm-db-conf.branch=feature/ha-redolog
+%GIT_OVERRIDES = zm-mailbox.branch=feature/ha
+%GIT_OVERRIDES = zm-zcs-lib.branch=feature/solr
 # %GIT_OVERRIDES          = zm-mailbox.remote=myremote
 # %GIT_OVERRIDES          = zm-mailbox.tag=judaspriest-872    # .tag always overrides .branch
