--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -117,6 +117,7 @@ references:
             only:
                - master
                - develop
+               - feature/jwt
 
 ############################################################################
 
